--- a/L5/L5.ipynb
+++ b/L5/L5.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# レッスン5：Pythonのデータ型：PythonのBooleanとif文（紹介）\n",
+    "# レッスン５：Pythonのデータ型：PythonのBoolean　と　Python の制御文：if文（紹介）\n",
     "## Boolean (ブーリアン)＝ Bool (ブール)（略語）\n",
     "\n",
     "PythonでBooleanはよく使われています。何かの決断を決定するためBooleanはよく利用されています。どのようにBooleanはそれを達成するか今から習いましょう。\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,8 @@
      "output_type": "stream",
      "text": [
       "<class 'bool'>\n",
-      "<class 'bool'>\n"
+      "<class 'bool'>\n",
+      "<class 'float'>\n"
      ]
     }
    ],
@@ -38,6 +39,9 @@
     "print(type(a))\n",
     "\n",
     "b = False\n",
+    "print(type(b))\n",
+    "\n",
+    "b = 78.6\n",
     "print(type(b))"
    ]
   },
@@ -106,12 +110,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"string1\" == \"string1\")\n",
     "print(\"string33\" == \"string54\")\n",
+    "# print(\"mojiretu\" > 89)\n",
     "print(98 < 96)\n",
     "print(4 > 3)\n",
     "print(5 >= 4)\n",
@@ -124,8 +145,9 @@
     "print(3 in list1)\n",
     "print(3 not in list1)\n",
     "\n",
-    "# 君の推測をこの行で書いてください：\n",
-    "# 番号記号「＃」を先頭で入力すれば、コードを処理するとき、無視されています。そのため、このようにメモを書いたりできます。"
+    "# 君の推測をこの行で書いてください：True, False, False, True, True, False, True, True, False\n",
+    "# 番号記号「＃」を先頭で入力すれば、コードを処理するとき、無視されています。そのため、このようにメモを書いたりできます。\n",
+    "# print(\"test\")"
    ]
   },
   {
@@ -139,11 +161,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# この下から始めてください\n"
+    "# この下から始めてください\n",
+    "print(56.7 == 45.8)\n",
+    "var1 = \"string4\"\n",
+    "var8 = \"string56\"\n",
+    "\n",
+    "print(var1 != var8)\n"
    ]
   },
   {
@@ -248,7 +284,7 @@
     "elif var > 0:\n",
     "    print(\"変数は０より大きい\")\n",
     "else:\n",
-    "    print(\"変数は数値が代入されていません\")"
+    "    continue"
    ]
   },
   {
@@ -299,11 +335,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "5.4の最初の例の再びみてみましょう。そこに書いたコードは変数の値は正確的に見分けできません。ただ０より小さいか大きいの見分けでしたね。\n",
+    "\n",
+    "そこで、if文にもっと特定な要件を紹介しましょう。一つの方法は、if文の中に、もう一回if文を紹介します。例を見てみよう。\n",
+    "<br>このようなif文は**ネストしたif文**と言います。ネストは英語からの借用語で、nestから基づきました。直接役すれば、「組み入れ」と意味します。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "変数は0より大きい\n",
+      "変数は10より大きい\n"
+     ]
+    }
+   ],
+   "source": [
+    "var = 12\n",
+    "\n",
+    "if var < 0:\n",
+    "    print(\"変数は0より小さい\")\n",
+    "elif var > 0:\n",
+    "    print(\"変数は0より大きい\")\n",
+    "    if var > 50:\n",
+    "        print(\"変数は50より大きい\")\n",
+    "    elif var > 40:\n",
+    "        print(\"変数は40より大きい\")\n",
+    "    elif var > 30:\n",
+    "        print(\"変数は30より大きい\")\n",
+    "    elif var > 20:\n",
+    "        print(\"変数は20より大きい\")\n",
+    "    elif var > 10:\n",
+    "        print(\"変数は10より大きい\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 最後の課題\n",
     "\n",
     "1. 一つの比較演算子を利用してif-else文を作ってください。\n",
     "2. if-elif-else文で第二条件まで考慮してください。\n",
-    "3. if-elif-else文で二つ以上の条件を紹介して、その条件であるlistの中身に何の要素が存在するか確かめてください。"
+    "3. if-elif-else文で二つ以上の条件を紹介して、その条件であるlistの中身に何の要素が存在するか確かめてください。\n",
+    "4. 時間あれば、ネストされたif文を作りましょう。"
    ]
   },
   {
@@ -330,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
