--- a/L10/L10.ipynb
+++ b/L10/L10.ipynb
@@ -13,7 +13,7 @@
     "まず、for文を書く時、何回繰り返すかを制御するため、条件を入力しないといけないですね。例を見てみましょう：\n",
     "\n",
     "```Python\n",
-    "for i in (条件):\n",
+    "for i in (条件=list1):\n",
     "    (繰り返したいコード)\n",
     "    \n",
     "```\n",
@@ -22,9 +22,10 @@
     "2. ```list1``` は条件です。条件がなければこのfor文は何を従えばコードがわからないから、必ず書かないといけない。\n",
     "3. ```(繰り返したいコード)``` は書いた通り、そのままの意味です。\n",
     "\n",
-    "なぜかforなどの単語が使われているか、それは英語から単語です。今回はそれについて検討しないです。この関数の仕組みと書き方を理解できれば十分です。\n",
+    "なぜかforなどの単語が使われているか、それは英語からの単語です。今回はそれについて検討しないです。この関数の仕組みと書き方を理解できれば十分です。\n",
     "\n",
-    "そこで、条件の書き方が二つ種類が以前紹介しました。ここでまたもっと見やすい示し方をして、二つの部分に分けます。\n"
+    "そこで、条件の書き方が二つ種類が以前紹介しました。ここでまたもっと見やすい示し方をして、二つの部分に分けます。\n",
+    "\n"
    ]
   },
   {
@@ -41,20 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i + 1 =  33\n",
-      "i + 1 =  5\n",
-      "i + 1 =  6\n",
-      "i + 1 =  7\n",
-      "i + 1 =  9\n",
-      "i + 1 =  3\n",
-      "i + 1 =  13\n"
+      "i + 1 = 33\n",
+      "i + 1 = 5\n",
+      "i + 1 = 6\n",
+      "i + 1 = 7\n",
+      "i + 1 = 9\n",
+      "i + 1 = 3\n",
+      "i + 1 = 13\n"
      ]
     }
    ],
@@ -64,12 +65,12 @@
     "for i in list1:\n",
     "    # ここで、変数 i を扱える。\n",
     "    i = i + 1\n",
-    "    print(\"i + 1 = \", i)"
+    "    print(\"i + 1 =\", i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -77,12 +78,19 @@
      "output_type": "stream",
      "text": [
       "park\n",
+      "parkpark\n",
       "museum\n",
+      "museummuseum\n",
       "school\n",
+      "schoolschool\n",
       "supermarket\n",
+      "supermarketsupermarket\n",
       "apartment\n",
+      "apartmentapartment\n",
       "bus stop\n",
-      "university\n"
+      "bus stopbus stop\n",
+      "university\n",
+      "universityuniversity\n"
      ]
     }
    ],
@@ -91,7 +99,8 @@
     "\n",
     "for b in list2:\n",
     "    # そのまま　b をprintできます。\n",
-    "    print(b)"
+    "    print(b)\n",
+    "    print(b*2)"
    ]
   },
   {
@@ -107,18 +116,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "meme\n",
+      "2\n",
+      "meme\n",
+      "3\n",
+      "meme\n",
+      "4\n",
+      "meme\n",
+      "5\n",
+      "meme\n",
+      "6\n",
+      "meme\n"
+     ]
+    }
+   ],
    "source": [
-    "# コードはこの下から初めてください。\n"
+    "# コードはこの下から初めてください。\n",
+    "list_ = [1, 2, 3, 4, 5, 6, ]\n",
+    "for a in list_:\n",
+    "    print(a)\n",
+    "    print(\"meme\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. for文で```-10```～```-1```までの数字を表示すてください。"
+    "2. for文で```-10```～```-1```までの数字を表示してください。"
    ]
   },
   {
@@ -136,13 +168,13 @@
    "source": [
     "## 10.2 range関数で制御する\n",
     "\n",
-    "以前rangeの使い方少ししましたね。ここでもう一回ここで紹介します。\n",
+    "以前rangeの使い方少ししましたね。ここでもう一回紹介します。\n",
     "\n",
     "長いコードを書かなければならないリストと違い、```range```は非常に短い文章で一定の長さを設定することができます。 ```range``` 関数は条件で指定した値からリストを作成します。\n",
     "\n",
     "**ポイント： ```range``` の意味は「範囲」です。**\n",
     "\n",
-    "rangeを部分的に勉強しましょう。\n",
+    "range関数を部分的に勉強しましょう。\n",
     "1. 第一の場合に、書いた数値はrangeの長さになる。どれぐらいの長さになるか、その数値で設定する。\n",
     "```Python\n",
     "range([数値])\n",
@@ -151,7 +183,7 @@
     "```Python\n",
     "range([数値１],[数値２])\n",
     "```\n",
-    "3. 第三の場合の、第二の場合に似ているが、数値３がある。その役割を設定すれば、その値によってrangeを飛ばす。数値３＝５でしたら、毎５回飛ばす。\n",
+    "3. 第三の場合に、第二の場合に似ているが、数値３がある。その数値３を設定すれば、その値によってrangeを飛ばす。数値３＝５でしたら、毎回五個飛ばす。\n",
     "```Python\n",
     "range([数値１],[数値２],[数値３])\n",
     "```"
@@ -163,12 +195,12 @@
    "source": [
     "### 第一の場合\n",
     "\n",
-    "ポイント：例で13設定したんだけど、12までだけprintされた。rangeは毎回必ず最後設定された要素未満になる。さらに、０から始める。"
+    "ポイント：例で13を設定したんだけど、12までだけprintされた。rangeは毎回必ず最後設定された要素未満になる。さらに、０から始める。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
