--- a/L12/L12.ipynb
+++ b/L12/L12.ipynb
@@ -24,20 +24,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I\n",
+      "am\n",
+      "not\n",
+      "a\n",
+      "hero\n",
+      "but\n",
+      "I\n",
+      "am\n",
+      "a\n",
+      "villain\n"
+     ]
+    }
+   ],
    "source": [
-    "# for文はここから始めてください\n"
+    "# for文はここから始めてください\n",
+    "list1 = [\"I\", \"am\", \"not\", \"a\", \"hero\", \"but\", \"I\", \"am\", \"a\", \"villain\"]\n",
+    "\n",
+    "for i in list1:\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "am\n"
+     ]
+    }
+   ],
    "source": [
-    "# while文はここから始めてください\n"
+    "print(list1[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I\n",
+      "am\n",
+      "not\n",
+      "a\n",
+      "hero\n",
+      "but\n",
+      "I\n",
+      "am\n",
+      "a\n",
+      "villain\n"
+     ]
+    }
+   ],
+   "source": [
+    "# while文はここから始めてください\n",
+    "d = 0\n",
+    "\n",
+    "while d < 10:\n",
+    "    print(list1[d])\n",
+    "    d += 1"
    ]
   },
   {
@@ -51,28 +111,65 @@
     "```list2 = [\"my\", \"pet\", \"is\", 'not', 'a', \"fish\", \"but\", \"a\", \"tiger!\"]```\n",
     "\n",
     "得ないのいけない結果：\n",
-    "```my tiger!```\n",
+    "\n",
+    "```\n",
+    "my \n",
+    "tiger!\n",
+    "```\n",
     "\n",
     "ヒント：print関数、if-else文を利用しましょう。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my\n",
+      "tiger!\n",
+      "my\n",
+      "tiger!\n"
+     ]
+    }
+   ],
    "source": [
-    "# for文はここから始めてください\n"
+    "# for文はここから始めてください\n",
+    "list2 = [\"my\", \"pet\", \"is\", 'not', 'a', \"fish\", \"but\", \"a\", \"tiger!\"]\n",
+    "\n",
+    "for i in list2:\n",
+    "    if i == \"my\":\n",
+    "        print(i)\n",
+    "    elif i == \"tiger!\":\n",
+    "        print(i)\n",
+    "\n",
+    "i = 0\n",
+    "while i < len(list2):\n",
+    "    if list2[i] == \"my\":\n",
+    "        print(list2[i])\n",
+    "    elif list2[i] == \"tiger!\":\n",
+    "        print(list2[i])\n",
+    "    i+=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# while文はここから始めてください\n"
-   ]
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my\n",
+      "tiger!\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -90,20 +187,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['my']\n",
+      "['my', 'pet']\n",
+      "['my', 'pet', 'is']\n",
+      "['my', 'pet', 'is', 'not']\n",
+      "['my', 'pet', 'is', 'not', 'a']\n",
+      "['my', 'pet', 'is', 'not', 'a', 'fish']\n",
+      "['my', 'pet', 'is', 'not', 'a', 'fish', 'but']\n",
+      "['my', 'pet', 'is', 'not', 'a', 'fish', 'but', 'a']\n",
+      "['my', 'pet', 'is', 'not', 'a', 'fish', 'but', 'a', 'tiger!']\n"
+     ]
+    }
+   ],
    "source": [
-    "# for文はここから始めてください\n"
+    "# for文はここから始めてください\n",
+    "\n",
+    "list2 = [\"my\", \"pet\", \"is\", 'not', 'a', \"fish\", \"but\", \"a\", \"tiger!\"] \n",
+    "list3 = []\n",
+    "\n",
+    "for h in list2:\n",
+    "    list3.append(h)\n",
+    "    \n",
+    "print(list3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['my', 'pet', 'is', 'not', 'a', 'fish', 'but', 'a', 'tiger!']\n"
+     ]
+    }
+   ],
    "source": [
-    "# while文はここから始めてください\n"
+    "# while文はここから始めてください\n",
+    "list2 = [\"my\", \"pet\", \"is\", 'not', 'a', \"fish\", \"but\", \"a\", \"tiger!\"] \n",
+    "list3 = []\n",
+    "p =0\n",
+    "while p < 9:\n",
+    "    list3.append(list2[p])\n",
+    "\n",
+    "    p += 1\n",
+    "print(list3)"
    ]
   }
  ],
