--- a/L13 obs/L13.ipynb
+++ b/L13 obs/L13.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -27,14 +27,14 @@
      "output_type": "stream",
      "text": [
       "45\n",
-      "45\n",
+      "47\n",
       "[9, 8]\n"
      ]
     }
    ],
    "source": [
     "k = 45\n",
-    "h = 45\n",
+    "h = 47\n",
     "u = [9,8]\n",
     "\n",
     "print(k)\n",
@@ -56,14 +56,18 @@
     "    \n",
     "def example(hikisuu1, hikisuu2):\n",
     "    print(hikisuu1)\n",
-    "    print(hikisuu2)```\n",
+    "    print(hikisuu2)\n",
+    "\n",
+    "def print(hikisuu1)\n",
+    "    hikisuu1を印刷できるコード\n",
+    "```\n",
     "\n",
     "#### 部分的に説明しましょう\n",
     "1. `def`　は　`defintion`（デフィニションと読める）から略語されました。`definition` は「定義」という意味を持っています。関数オブジェクトを定義できる役割をして、そのようなイメージを理解できます。\n",
     "2. 関数名の意味はそのままです。関数オブジェクトの下にコードを書いて、そのコードを実行するため、使いたい時ただ関数名を呼べばそべての囲まれたコードをまた書かず実行できます。次に示す図に、例として同じようにScratchに使える定義ブロックです。\n",
     "3. `(引数1, 引数2, ..., 引数n)`は関数オブジェクトの中に変数として扱えます。後で例を見せるから、使い方や意味もよりやすく理解できます。\n",
     "\n",
-    "**そこで一つ聞きたい、関数名はオブジェクトですか？YesかNoの理由も教えてください。**\n",
+    "**そこで一つ聞きたい、関数はオブジェクトですか？YesかNoの理由も教えてください。**\n",
     "\n",
     "\n",
     "**ポイント：** 今まで使っているprint関数、append関数などは今回学ぶ「関数」と同じです。以前誰かがprint関数などを作って、他人を利用したい時ただ関数名を呼べばコードが動く。\n",
@@ -80,23 +84,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "simple printer\n"
+      "78\n",
+      "156\n",
+      "asumi\n",
+      "asumiasumi\n",
+      "lol\n",
+      "lollol\n"
      ]
     }
    ],
    "source": [
     "def yasin(hikisuu):\n",
     "    print(hikisuu)\n",
+    "    print(hikisuu * 2)\n",
     "    \n",
     "\n",
-    "yasin(\"simple printer\")"
+    "yasin(78)\n",
+    "\n",
+    "yasin(\"asumi\")\n",
+    "\n",
+    "yasin(\"lol\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get them\n",
+      "get themget them\n"
+     ]
+    }
+   ],
+   "source": [
+    "yasin(\"get them\")"
    ]
   },
   {
@@ -110,52 +142,54 @@
     "引数は任意です。ひとつも引数を受け取らない関数も作れます。\n",
     "\n",
     "関数の戻り値は `return` キーワードで返します。\n",
-    "<br>**`return` は日本語で「返す」と言う意味をを持っています。**\n",
+    "<br>**`return` は日本語で「返す」と言う意味を持っています。**\n",
     "\n",
     "例えば、引数として `x` と `y` の二つを受け取り、 それらを足し合わせて、関数の戻り値として返す関数 `add(x, y)` は、次のように定義できます。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add1(x, y):\n",
-    "    \n",
     "    total = x + y\n",
-    "    \n",
     "    return total\n",
     "\n",
+    "\n",
     "def add2(x, y):\n",
-    "    return x + y"
+    "    return x + y\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77\n",
-      "46\n"
+      "17\n",
+      "79\n",
+      "17\n",
+      "79\n"
      ]
     }
    ],
    "source": [
-    "def add1(x, y):\n",
-    "    \n",
-    "    total = x + y\n",
-    "    \n",
-    "    return total\n",
+    "nam = add1(9, 8)\n",
+    "print(nam)\n",
     "\n",
-    "tasu = add1(76, 1)\n",
+    "print(add1(34, 45))\n",
     "\n",
-    "print(tasu)\n",
-    "print(add1(45, 1))"
+    "\n",
+    "nam = add2(9, 8)\n",
+    "print(nam)\n",
+    "\n",
+    "print(add2(34, 45))"
    ]
   },
   {
@@ -167,23 +201,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "160\n"
+      "94\n",
+      "94\n"
      ]
     }
    ],
    "source": [
-    "hensuu1 = 70\n",
+    "hensuu1 = 4\n",
     "hensuu2 = 90\n",
     "\n",
     "kekka1 = add1(hensuu1, hensuu2)\n",
-    "print(kekka1)"
+    "print(kekka1)\n",
+    "\n",
+    "kekka2 = add2(hensuu1, hensuu2)\n",
+    "print(kekka2)"
    ]
   },
   {
@@ -193,7 +231,7 @@
     "少し練習しましょう。\n",
     "\n",
     "**小さい課題：**\n",
-    "1. 二つの変数を掛けられる関数を定義してから、結果をprintしてください\n",
+    "1. 二つの変数をかけられる関数を定義してから、結果をprintしてください\n",
     "2. 三つの変数を全てかけて、結果をprintで得てください"
    ]
   },
@@ -202,7 +240,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def m2020 ()"
+   ]
   },
   {
    "cell_type": "code",
@@ -229,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -256,15 +296,30 @@
      "output_type": "stream",
      "text": [
       "This is Lesson 13\n",
+      "This is Lesson 13\n",
       "I am a student in this school!\n",
-      "[1, 2, 3]\n"
+      "[1, 2, 3]\n",
+      "This is Lesson 13\n",
+      "This is Lesson 13\n",
+      "This is Lesson 13\n",
+      "This is Lesson 13\n",
+      "This is Lesson 13\n",
+      "This is Lesson 13\n",
+      "This is Lesson 13\n",
+      "This is Lesson 13\n",
+      "This is Lesson 13\n",
+      "This is Lesson 13\n"
      ]
     }
    ],
    "source": [
     "print1()\n",
+    "print1()\n",
     "print2()\n",
-    "print3()"
+    "print3()\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print1()"
    ]
   },
   {
@@ -278,20 +333,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number: 0\n",
-      "15\n"
+      "０か１を入力してください: 1\n",
+      "5\n"
      ]
     }
    ],
    "source": [
-    "i = int(input('Enter number: '))\n",
+    "i = int(input('０か１を入力してください: '))\n",
     "\n",
     "if i == 0:\n",
     "    def foo(x, y):\n",
@@ -317,10 +372,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 か 1 を入力してください: 0\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = int(input('0 か 1 を入力してください: '))\n",
+    "\n",
+    "if i == 0:\n",
+    "    def foo(x, y):\n",
+    "        return x * y\n",
+    "elif i == 1:\n",
+    "    def foo(x, y):\n",
+    "        return x / y\n",
+    "\n",
+    "print(foo(10, 5))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -332,69 +407,6 @@
     "\n",
     "1. for文で０から１０までprintできるコードをdef関数に入れて、実行してください。\n",
     "2. 以前作ったPython電卓のコードをdef関数に入れて、実行してください。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculator():\n",
-    "    print(\"Please select operation -\\n\" \\\n",
-    "        \"1. Add\\n\" \\\n",
-    "        \"2. Subtract\\n\" \\\n",
-    "        \"3. Multiply\\n\" \\\n",
-    "        \"4. Divide\\n\")\n",
-    " \n",
-    " \n",
-    "    # Take input from the user\n",
-    "\n",
-    "    select = int(input(\"Select operations form 1, 2, 3, 4 :\"))\n",
-    "\n",
-    "    number_1 = float(input(\"Enter first number: \"))\n",
-    "    number_2 = float(input(\"Enter second number: \"))\n",
-    "\n",
-    "    if select == 1:\n",
-    "        print(\"{} + {} = {}\".format(number_1, number_2, number_1 + number_2))\n",
-    "    #     print(number_1, \"+\", number_2, \"=\", number_1 + number_2)\n",
-    "\n",
-    "    elif select == 2:\n",
-    "        print(number_1, \"-\", number_2, \"=\", number_1 - number_2)\n",
-    "\n",
-    "    elif select == 3:\n",
-    "        print(number_1, \"*\", number_2, \"=\", number_1 * number_2)\n",
-    "\n",
-    "    elif select == 4:\n",
-    "        print(number_1, \"/\", number_2, \"=\", number_1 / number_2)\n",
-    "    else:\n",
-    "        print(\"Invalid input\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please select operation -\n",
-      "1. Add\n",
-      "2. Subtract\n",
-      "3. Multiply\n",
-      "4. Divide\n",
-      "\n",
-      "Select operations form 1, 2, 3, 4 :1\n",
-      "Enter first number: 34\n",
-      "Enter second number: 34\n",
-      "34.0 + 34.0 = 68.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "calculator()"
    ]
   },
   {
