--- a/L11/L11.ipynb
+++ b/L11/L11.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "```Python\n",
     "i = 0\n",
-    "while (条件、例：i > 5):\n",
+    "while (条件、例：i < 5):\n",
     "    （繰り返したいコード）\n",
     "    i += 1 #（または、 i = i + 1)\n",
     "```\n",
@@ -37,7 +37,10 @@
     "while文を部分的に見てみましょう：\n",
     "1. ```i = 0```1行目で i は 0 に初期化される必要があります。\n",
     "2. ```i += 1 #（または、 i = i + 1)```の役割は、毎回繰り替えさらる時、```i```の値は１足します。繰り返したいコードの下に書いた意味もあります。順番は非常に重要です。毎ラウンド値1を追加しないと、ループは無限大になります。次のパートで例を示します。\n",
-    "3. 条件によって、```i```の値が超えているかどうか、毎繰り返し確かめている。レッスン５に紹介された**「比較演算子」**を想像的に条件式として利用できます。例えば、```while i < 5:```だったら、「```i```の値は５より小さい限り、繰り返しが行う」という意味を持っています。"
+    "3. 条件によって、```i```の値が超えているかどうか、毎繰り返し確かめている。レッスン５に紹介された**「比較演算子」**を条件式として利用できます。例えば、\n",
+    "```Python\n",
+    "while i < 5:```\n",
+    "だったら、「```i```の値は５より小さい限り、繰り返しが行う」という意味を持っています。"
    ]
   },
   {
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -66,13 +69,14 @@
       "1\n",
       "2\n",
       "3\n",
-      "4\n"
+      "4\n",
+      "5\n"
      ]
     }
    ],
    "source": [
     "i = 0\n",
-    "while i < 5:\n",
+    "while i <= 5: #False\n",
     "    print(i)\n",
     "    i += 1 # i に1を足す"
    ]
@@ -86,18 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
       "1\n",
       "2\n",
       "3\n",
-      "4\n",
-      "5\n"
+      "4\n"
      ]
     }
    ],
@@ -142,12 +146,13 @@
     "4\n",
     "3\n",
     "2\n",
-    "1```"
+    "1\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +167,7 @@
     "\n",
     "```while```ブロックの中で ```break``` と書くそこで ```while``` ループが終了します。\n",
     "\n",
-    "英語では、```break``` は 「壊す」 という意味です。その意味でbreak文の役割を理解したらよりやすく思えられます。"
+    "英語では、```break``` は 「壊す」 という意味です。その意味でbreak文の役割を理解したらやすく覚えられます。"
    ]
   },
   {
@@ -185,7 +190,7 @@
     "i = 0\n",
     "while i < 10:\n",
     "    print(i)\n",
-    "    i += 1\n",
+    "    i = i + 1\n",
     "    \n",
     "    if i == 4:\n",
     "        break  # ループを終了"
@@ -254,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -269,6 +274,7 @@
    ],
    "source": [
     "list_ = [10, 9, 8, 7]\n",
+    "# print(list_)\n",
     "\n",
     "print(list_[0])\n",
     "print(list_[1])\n",
@@ -286,14 +292,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this\n",
+      "is\n",
+      "a\n",
+      "test\n",
+      "trial\n",
+      "run\n",
+      "do\n",
+      "your\n",
+      "best!\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [\"this\", \"is\", \"a\", \"test\", \"trial\", \"run\", \"do\", \"your\", \"best!\"]\n",
     "\n",
     "# この下から続いてください\n",
-    "x = 0\n"
+    "x = 0\n",
+    "\n"
    ]
   },
   {
@@ -304,6 +327,66 @@
     "\n",
     "1. 50から100までwhile文でprintしてください。\n",
     "2. 7個stringを持つlistを作って、それぞれの要素をprintできるwhile文を書いてください。けど、途中で５個目でbreakでループを抜ける。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this\n",
+      "is\n",
+      "a\n",
+      "test\n",
+      "trial\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"this\", \"is\", \"a\", \"test\", \"trial\", \"run\", \"do\"]\n",
+    "\n",
+    "b = 0\n",
+    "while b < 7:\n",
+    "#     print(b)\n",
+    "    print(list1[b])\n",
+    "    b += 1\n",
+    "    \n",
+    "    if b == 5:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this\n",
+      "is\n",
+      "a\n",
+      "test\n",
+      "trial\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"this\", \"is\", \"a\", \"test\", \"trial\", \"run\", \"do\"]\n",
+    "\n",
+    "b = 0\n",
+    "while b < 7:\n",
+    "#     print(b)\n",
+    "    print(list1[b])\n",
+    "    b += 1\n",
+    "    \n",
+    "    if list1[b] == \"run\":\n",
+    "        break"
    ]
   },
   {
@@ -319,6 +402,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
